--- a/BDLanguageUpdater/BDLanguageUpdater.csproj
+++ b/BDLanguageUpdater/BDLanguageUpdater.csproj
@@ -66,7 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
+    <Compile Include="Scripts\ConfigFile.cs" />
+    <Compile Include="Scripts\DirectoriesModel.cs" />
+    <Compile Include="Scripts\Constants.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +77,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\ErrorDialog.cs" />
+    <Compile Include="Scripts\LanguageFileUpdater.cs" />
+    <Compile Include="Scripts\UserPreferencesFile.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -113,6 +118,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
+    </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
