--- a/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
+++ b/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworK>net7.0</TargetFrameworK>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-BDLanguageUpdater.WorkerService-6417340f-5920-4e73-9d91-379e37814117</UserSecretsId>
     <RootNamespace>BDLanguageUpdater.WorkerService</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 </Project>
