--- a/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
+++ b/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
@@ -22,5 +22,6 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
   </ItemGroup>
 </Project>
