--- a/BDOLanguageUpdater.Service/Properties/launchSettings.json
+++ b/BDOLanguageUpdater.Service/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "BDLanguageUpdater.WorkerService": {
+    "BDOLanguageUpdater.Service": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
