refactor: startup app via creating shortcut

--- a/BDOLanguageUpdater.WPF/BDOLanguageUpdater.WPF.csproj
+++ b/BDOLanguageUpdater.WPF/BDOLanguageUpdater.WPF.csproj
@@ -52,6 +52,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BDOLanguageUpdater.Service\BDOLanguageUpdater.Service.csproj" />
+      <ProjectReference Include="..\BDOLanguageUpdater.ShortcutGenerator\BDOLanguageUpdater.ShortcutGenerator.csproj" />
     </ItemGroup>
 
 
