--- a/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
+++ b/BDOLanguageUpdater.Service/BDOLanguageUpdater.Service.csproj
@@ -1,11 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFrameworK>net7.0</TargetFrameworK>
-    <Nullable>enable</Nullable>
-    <RootNamespace>BDOLanguageUpdater.Service</RootNamespace>
-  </PropertyGroup>
-
   <ItemGroup>
     <None Remove="appsettings.json" />
   </ItemGroup>
@@ -17,10 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting"/>
+    <PackageReference Include="Microsoft.Extensions.Http" />
+    <PackageReference Include="Newtonsoft.Json"/>
+    <PackageReference Include="Serilog.AspNetCore" />
   </ItemGroup>
 </Project>
